...
            .font(.body)
            .fontWeight(.bold)
        }
        .padding(.horizontal, 10)
        .padding(.vertical, 4)
        .frame(width: 120, alignment: .leading)
        .accessibilityIdentifier("FavoriteButton")
      }

      VStack(alignment: .leading) {
        Text("Name: \(dog.name)")
          .font(.system(.title))
          .foregroundColor(.gray)
...
