...
    ZStack {
      TabView(selection: $selectedTab) {
        WelcomeView()
          .tabItem {
            Image(systemName: "hand.wave")
            Text("Welcome")
              .accessibilityIdentifier("WelcomeTab")
          }
          .tag(0)

        DogList(dogs: petStore.dogs)
          .tabItem {
            Image(systemName: "house.fill")
            Text("Dog House")
              .accessibilityIdentifier("DogHouseTab")
          }
          .tag(1)

        BreedsView(breeds: petStore.dogBreeds)
          .tabItem {
            Image(systemName: "pawprint.fill")
...
