...
                       image: "dipstick",
                       favoriteToy: "squeeky fire hydrant")
    let jewel = Dog(name: "Jewel",
                    dateOfBirth: formatter.date(from: "2021-12-25") ?? Date(),
                    image: "jewel",
                    favoriteToy: "fuzzy sheep")
    let dottie = Dog(name: "Dottie",
                     dateOfBirth: formatter.date(from: "2021-12-25") ?? Date(),
                     image: "dottie",
                     favoriteToy: nil)
    let bravo = Dog(name: "Bravo",
                    dateOfBirth: formatter.date(from: "2021-12-25") ?? Date(),
                    image: nil,
...
