...
        ForEach(dogsSorted) { dog in
          NavigationLink(destination: DogDetailView(dog: dog)) {
            DogListRow(dog: dog)
          }
        }
      }
      .navigationBarTitle("All Dogs")
      .toolbar {
        ToolbarItem(placement: .navigationBarTrailing) {
          Button(action: {
            self.addDog.toggle()
          }, label: {
            Image(systemName: "plus")
...
